# fn_type_alias

./: Cargo.toml  README.md
src/: lib.rs
